fix page 9 height so it covers the entire viewpoint
...when it feels like. This is an impossible bullshit.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -24,6 +24,15 @@ html, body, p {
 }
 
 body {
+  --footer-height: 2rem;
+
+  @include for-tablet {
+    --footer-height: 5rem;
+  }
+
+  @include for-mobile {
+    --footer-height: 1.5rem;
+  }
 
   header {
     nav {
@@ -47,13 +56,9 @@ body {
         }
 
         &:last-of-type {
-          height: auto;
-          min-height: calc(100vh - 2rem);
+          height: calc(100vh - var(--footer-height, 2rem));
+          min-height: calc(100vh - var(--footer-height, 2rem));
           padding-bottom: 0;
-
-          @include for-mobile-sm {
-            min-height: 100vh;
-          }
         }
       }
 
@@ -1318,21 +1323,14 @@ body {
       }
 
       &#contact {
-        padding: 1rem 0 33vh;
         box-sizing: border-box;
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
-
-        @include for-tablet {
-          padding: 2rem 2rem 33vh;
-        }
-        @include for-mobile {
-          padding: 2rem 2rem 8vh;
-        }
+        padding: 2rem;
 
         @include for-mobile-sm {
-          padding: 1.5rem 1rem 8vh;
+          padding: 1.5rem 1rem;
         }
 
         h2 {
@@ -1625,11 +1623,10 @@ body {
     position: relative;
     z-index: 1;
     padding: 0.5rem 2rem;
-    height: 2rem;
+    height: var(--footer-height, 2rem);
     box-sizing: border-box;
 
     @include for-mobile {
-      height: auto;
       padding: 0.5rem 1rem;
     }
 
